--- a/style/style.css
+++ b/style/style.css
@@ -101,6 +101,61 @@ marquee{
     background-color: black !important;
 }
 
+/* curriculum section style */
+
+.curriculum{
+    background: url(../assets/bg.png);
+    margin-top: 90px;
+}
+.curriculum>h1{
+    text-align: center;
+    font-weight: 700;
+    font-size: 38px;
+}
+
+.curriculum-card{
+    margin-top: 60px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 80px;
+    text-align: center;
+}
+
+.curriculum-card-item{
+    padding: 10px;
+    box-sizing: border-box;
+    border: 0.94px solid rgb(222, 245, 255);
+    border-radius: 18.86px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(222, 245, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+}
+#item-1{
+    padding: 10px;
+    box-sizing: border-box;
+    border: 0.94px solid rgb(255, 244, 220);
+    border-radius: 18.86px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(255, 244, 220),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+}
+#item-2{
+    box-sizing: border-box;
+    border: 0.94px solid rgb(242, 232, 255);
+    border-radius: 18.86px;
+    padding: 10px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(238, 225, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+}
+
+
+.curriculum-card-item>p{
+    margin: 10px 0;
+}
+
+
+
+
 
 /* mobile responsive style */
 
@@ -133,9 +188,15 @@ marquee{
         flex-direction: column-reverse;
         text-align: center;
     }
-    
+
     .banner-image>img{
         width: 100%;
         margin-bottom: 20px;
+    }
+
+    /* curriculum section style */
+    .curriculum-card{
+        flex-direction: column;
+        gap: 30px;
     }
 }
